<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
    		android:title="@string/processing_preferences">
     	<ListPreference
                android:key="@string/strategy_preference"
                android:title="@string/title_strategy_preference"
                android:dialogTitle="@string/title_strategy_preference"
                android:entryValues="@array/strategy_values" 
                android:entries="@array/strategy_names"
                android:defaultValue="0" />
     	<CheckBoxPreference
                android:key="@string/loadfiles_preference"
                android:title="@string/loadfiles_preference"
                android:summary="@string/loadfiles_summary"
                android:defaultValue="true" />
   	</PreferenceCategory>
    <PreferenceCategory
            android:title="@string/files_preferences">
        <ListPreference
                android:key="@string/link_file_preference"
                android:title="@string/title_lf_preference"
                android:dialogTitle="@string/title_lf_preference"
                android:defaultValue="default.iir" />
        <ListPreference
                android:key="@string/geometry_file_preference"
                android:title="@string/title_gf_preference"
                android:dialogTitle="@string/title_gf_preference"
                android:defaultValue="@string/default_geometry_file" />
    </PreferenceCategory>
    <PreferenceCategory
    		android:key="@string/hidden_prefs">
    	<Preference
    			android:key="@string/lat_preference" />
		<Preference
    			android:key="@string/lon_preference" />
    	<Preference
    			android:key="@string/zoom_preference" />		
    	
    </PreferenceCategory>
</PreferenceScreen>
